# maoto-agent

./: .gitignore  CHANGELOG.md  INTERNAL_DOCS.md  LOCAL_TESTING.md  MANIFEST.in  OutsourcedMaotoAgentMethods.py  README.md  README_DEV.md  conda-forge-PR-template.md  conda-forge-README.md  meta.yaml  minimal_test.py  notes.py  notes.txt  pyproject.toml  setup.py  text.txt
.github/workflows/: conda-publish.yml  conda-punlish.yml  lint.yml  pypi-package.yml  pypi-publish.yaml  pypi-publish.yml  release.yml  release_notes.yml  test.yml  test_flow.yml  versioner.yml
assets/: reformat.py
conda-recipe/: build.sh  meta.yaml
dev/: git-rebase-wrk.sh.sh  update_branch.sh
envs/: so-samtools.yaml
src/: notes.py
src/maoto_agent/: agent.graphql  agent_settings.py  app_types.py  app_types_old.py  conf.py  maoto_agent.py
src/maoto_agent/mcp/: __init__.py  mcp_settings.py  server.py
tests/: .secrets_01  .secrets_02  01_resolver.py  02_provider.py  example_usage.py
