[build-system]
requires = [
    "hatchling>=1.27.0",  # Modern build backend that works well with uv
    "hatch-vcs>=0.4.0"    # For versioning with setuptools-scm
]
build-backend = "hatchling.build"

[project]
name = "maoto-agent"
description = "Maoto Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Maoto", "Agent"]
authors = [
    {name = "Maoto"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "gql>=3.4.0",
    "websockets>=10.4",
    "psutil>=6.0.0",
    "python-dateutil>=2.9.0",
    "aiohttp>=3.8.6",
    "ariadne >=0.23.0",
    "pydantic >=2.10.6",
    "email-validator >=2.2.0",
    "aiofiles>=24.1.0",
]

dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/maoto_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "src/maoto_agent/**/*.py",
    "src/maoto_agent/**/*.graphql",
    "LICENSE",
    "README.md",
]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "post-release" }

[project.urls]
Home = "https://maoto.world"

[project.scripts]
maoto-agent = "maoto_agent.__main__:main"
